# darling-python

./: README.md
2.6/Python-2.6.9/: CMakeLists.txt  pyconfig.h  python2.6
2.6/Python-2.6.9/Lib/: site.py
2.6/Python-2.6.9/Lib/ctypes/: __init__.py
2.6/Python-2.6.9/Mac/Modules/cf/: _CFmodule.c
2.6/Python-2.6.9/Mac/Modules/cg/: _CGmodule.c
2.6/Python-2.6.9/Modules/: _cursesmodule.c  dlmodule.c  errnomodule.c  getpath.c  posixmodule.c  pwdmodule.c  pyexpat.c  readline.c  selectmodule.c
2.6/Python-2.6.9/Modules/_ctypes/: _ctypes.c  callproc.c
2.6/Python-2.6.9/Objects/: bufferobject.c
2.6/Python-2.6.9/Python/: ceval.c  mactoolboxglue.c
2.7/Python-2.7.10/: CMakeLists.txt  _sysconfigdata.py  pyconfig.h  python2.7
2.7/Python-2.7.10/Lib/ctypes/: __init__.py
2.7/Python-2.7.10/Modules/: _cursesmodule.c  dlmodule.c  getpath.c  posixmodule.c  python.c  readline.c  selectmodule.c
2.7/Python-2.7.10/Modules/_ctypes/: _ctypes.c  callproc.c
2.7/Python-2.7.10/Modules/_ctypes/libffi_osx/x86/: darwin64.S  x86-darwin.S
2.7/Python-2.7.10/Python/: dynload_shlib.c
2.7/Python-2.7.16/: CMakeLists.txt  Makefile  Makefile.pre  Makefile.pre.in  _sysconfigdata.py  config.status  configure  configure.ac  dummy.c  pybuilddir.txt  pyconfig.h  setup.py
2.7/Python-2.7.16/Doc/whatsnew/: 2.7.rst
2.7/Python-2.7.16/Include/: pymactoolbox.h
2.7/Python-2.7.16/Lib/: _osx_support.py  cgi.py  cookielib.py  httplib.py  platform.py  pydoc.py  rlcompleter.py  urlparse.py
2.7/Python-2.7.16/Lib/ctypes/macholib/: dyld.py
2.7/Python-2.7.16/Lib/distutils/: ccompiler.py  sysconfig.py  unixccompiler.py
2.7/Python-2.7.16/Lib/distutils/command/: install.py
2.7/Python-2.7.16/Lib/distutils/tests/: test_build_ext.py
2.7/Python-2.7.16/Lib/logging/: handlers.py
2.7/Python-2.7.16/Lib/plat-mac/: bundlebuilder.py
2.7/Python-2.7.16/Lib/test/: test__locale.py  test_cookielib.py  test_httplib.py  test_httpservers.py  test_site.py  test_urlparse.py
2.7/Python-2.7.16/Mac/: Makefile  Makefile.in
2.7/Python-2.7.16/Mac/IDLE/: Makefile
2.7/Python-2.7.16/Mac/Modules/cf/: _CFmodule.c
2.7/Python-2.7.16/Mac/Modules/osa/: setup.py
2.7/Python-2.7.16/Mac/Modules/qt/: setup.py
2.7/Python-2.7.16/Mac/PythonLauncher/: Makefile
2.7/Python-2.7.16/Mac/Resources/app/: Info.plist.in
2.7/Python-2.7.16/Mac/Resources/framework/: Info.plist
2.7/Python-2.7.16/Mac/Tools/: pythonw.c
2.7/Python-2.7.16/Misc/: ACKS  python-config.in  python.pc
2.7/Python-2.7.16/Modules/: dlmodule.c  errnomodule.c  getpath.c  ld_so_aix  main.c  posixmodule.c  pwdmodule.c  python.c  readline.c  selectmodule.c
2.7/Python-2.7.16/Modules/_ctypes/: callproc.c  ctypes.h
2.7/Python-2.7.16/Python/: ceval.c  dynload_shlib.c  import.c  mactoolboxglue.c  pydtrace.h
darling/script/: gen_sysconfigdata.sh
